<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/werewolf_background1"
    tools:context=".Wolf">

    <TextView
        android:id="@+id/actionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <ImageView
        android:id="@+id/pCard1"
        android:contentDescription="@string/id1"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:duplicateParentState="true"
        android:src="@drawable/card_back1"
        app:layout_constraintBottom_toTopOf="@+id/pCard5"
        app:layout_constraintEnd_toStartOf="@+id/pCard2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionLabel" />

    <ImageView
        android:id="@+id/pCard2"
        android:contentDescription="@string/id2"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/card_back2"
        app:layout_constraintBottom_toTopOf="@+id/pCard6"
        app:layout_constraintEnd_toStartOf="@+id/pCard3"
        app:layout_constraintStart_toEndOf="@+id/pCard1"
        app:layout_constraintTop_toBottomOf="@+id/actionLabel" />

    <ImageView
        android:id="@+id/pCard3"
        android:contentDescription="@string/id3"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/card_back3"
        app:layout_constraintBottom_toTopOf="@+id/pCard7"
        app:layout_constraintEnd_toStartOf="@+id/pCard4"
        app:layout_constraintStart_toEndOf="@+id/pCard2"
        app:layout_constraintTop_toBottomOf="@+id/actionLabel" />

    <ImageView
        android:id="@+id/pCard4"
        android:contentDescription="@string/id4"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/card_back4"
        app:layout_constraintBottom_toTopOf="@+id/pCard8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pCard3"
        app:layout_constraintTop_toBottomOf="@+id/actionLabel" />

    <ImageView
        android:id="@+id/pCard5"
        android:contentDescription="@string/id5"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/card_back5"
        app:layout_constraintBottom_toTopOf="@+id/pCard9"
        app:layout_constraintEnd_toStartOf="@+id/pCard6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pCard1" />

    <ImageView
        android:id="@+id/pCard6"
        android:contentDescription="@string/id6"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/card_back6"
        app:layout_constraintBottom_toTopOf="@+id/pCard10"
        app:layout_constraintEnd_toStartOf="@+id/pCard7"
        app:layout_constraintStart_toEndOf="@+id/pCard5"
        app:layout_constraintTop_toBottomOf="@+id/pCard2" />

    <ImageView
        android:id="@+id/pCard7"
        android:contentDescription="@string/id7"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/card_back7"
        app:layout_constraintBottom_toTopOf="@+id/pCard11"
        app:layout_constraintEnd_toStartOf="@+id/pCard8"
        app:layout_constraintStart_toEndOf="@+id/pCard6"
        app:layout_constraintTop_toBottomOf="@+id/pCard3" />

    <ImageView
        android:id="@+id/pCard8"
        android:contentDescription="@string/id8"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="1"
        android:layout_column="3"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/card_back8"
        app:layout_constraintBottom_toTopOf="@+id/pCard12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pCard7"
        app:layout_constraintTop_toBottomOf="@+id/pCard4" />

    <ImageView
        android:id="@+id/pCard9"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:contentDescription="@string/id9"
        android:focusable="true"
        android:src="@drawable/card_back9"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toStartOf="@+id/pCard10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pCard5" />

    <ImageView
        android:id="@+id/pCard10"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:contentDescription="@string/id10"
        android:focusable="true"
        android:src="@drawable/card_back10"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toStartOf="@+id/pCard11"
        app:layout_constraintStart_toEndOf="@+id/pCard9"
        app:layout_constraintTop_toBottomOf="@+id/pCard6" />

    <ImageView
        android:id="@+id/pCard11"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:contentDescription="@string/id11"
        android:focusable="true"
        android:src="@drawable/card_back11"
        app:layout_constraintBottom_toTopOf="@+id/killButton"
        app:layout_constraintEnd_toStartOf="@+id/pCard12"
        app:layout_constraintStart_toEndOf="@+id/pCard10"
        app:layout_constraintTop_toBottomOf="@+id/pCard7" />

    <ImageView
        android:id="@+id/pCard12"
        android:layout_width="80dp"
        android:layout_height="120dp"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:contentDescription="@string/id12"
        android:focusable="true"
        android:src="@drawable/card_back12"
        app:layout_constraintBottom_toTopOf="@+id/killButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pCard11"
        app:layout_constraintTop_toBottomOf="@+id/pCard8" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/confirmButtonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="68dp"
        android:enabled="false"
        android:text="@string/witcherSaveButtonTextLabel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/killButton"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/killButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="68dp"
        android:enabled="false"
        android:text="@string/witcherKillButtonTextLabel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveButton" />

</androidx.constraintlayout.widget.ConstraintLayout>